--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -1,6 +1,11 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    overflow: hidden;
+}
+
+p {
+    margin:0px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -22,3 +27,73 @@ select,
 textarea {
     max-width: 280px;
 }
+
+#editor {
+            margin: 0;
+            height:500px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+#DocumentHeader {
+    text-align:center;
+}
+
+.buttondiv {
+    width:92px;
+    height:20px;
+}
+
+.p-aligncenter {
+    text-align:center;
+    font-weight:bold;
+    margin:0px;
+}
+
+#dropdownContent {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 92px;
+    height:60px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
