--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -1,7 +1,32 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ACE Autocompletion demo</title>
+</head>
+<body>
+    <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">Färgschema</button>
+        <div id="myDropdown" class="dropdown-content">
+            <a onclick="white()" class="buttondiv"><p class="p-aligncenter">white</p></a>
+            <a onclick="black()" class="buttondiv"><p class="p-aligncenter">black</p></a>
+            <a onclick="grayblue()" class="buttondiv"><p class="p-aligncenter">grayblue</p></a>
+        </div>
+    </div>
+    <h1 id="DocumentHeader">Text editor</h1>
+    <pre id="editor"></pre>
 
-<p>Use this area to provide additional information</p>
+
+
+
+    <!-- load ace -->
+    <script src="../../no-fonflikt/ace.js"></script>
+    <!-- load ace language tools -->
+    <script src="../../no-fonflikt/ext-language_tools.js"></script>
+    <!-- load external js file -->
+    <script src="../../no-fonflikt/doc.js"></script>
+</body>
+</html>
