--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -1,31 +1,16 @@
-﻿body {
-}
-#FileManager{
-    list-style-type: none;
-}
-.file{
-    text-decoration:none;
-    cursor:pointer;
-}
-.file:hover:not(.selectedFile){
-    color:darkgray;
-}
-.selectedFile{
-    color:red;
-}
-
+﻿
 
 
 /*Style for the file tree*/
 /* Just some base styles not needed for example to function */
-*, html { font-family: Verdana, Arial, Helvetica, sans-serif; }
+, html { font-family: Verdana, Arial, Helvetica, sans-serif; }
 
 body, form, ul, li, p, h1, h2, h3, h4, h5
 {
 	margin: 0;
 	padding: 0;
 }
-body { background-color: #606061; color: #ffffff; margin: 0; }
+/*body { background-color: #606061; color: #ffffff; margin: 0; }*/
 img { border: none; }
 p
 {
@@ -39,7 +24,7 @@ p
 input, select, textarea, th, td { font-size: 1em; }
 	
 /* CSS Tree menu styles */
-ol.tree
+ol.FileManager
 {
 	padding: 0 0 0 30px;
 	width: 300px;
@@ -57,7 +42,7 @@ ol.tree
 		li.file a
 		{
 			background: url(Icons/document.png) 0 0 no-repeat;
-			color: #fff;
+			color: #000;
 			padding-left: 21px;
 			text-decoration: none;
 			display: block;
@@ -65,7 +50,7 @@ ol.tree
 		li.file a[href *= '.pdf']	{ background: url(Icons/document.png) 0 0 no-repeat; }
 		li.file a[href *= '.html']	{ background: url(Icons/document.png) 0 0 no-repeat; }
 		li.file a[href $= '.css']	{ background: url(Icons/document.png) 0 0 no-repeat; }
-		li.file a[href $= '.js']		{ background: url(Icons/document.png) 0 0 no-repeat; }
+		li.file a[href $= '.js']		{ background: url(Icons/JSIcon16X16.png) 0 0 no-repeat; }
 	li input
 	{
 		position: absolute;
@@ -80,6 +65,7 @@ ol.tree
 	}
 		li input + ol
 		{
+            background-position: left center;
 			background: url(Icons/toggle-small-expand.png) 40px 0 no-repeat;
 			margin: -0.938em 0 0 -44px; /* 15px */
 			height: 1em;
@@ -87,6 +73,7 @@ ol.tree
 		li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
 	li label
 	{
+        background-position: left center;
 		background: url(Icons/folder-horizontal.png) 15px 1px no-repeat;
 		cursor: pointer;
 		display: block;
@@ -95,6 +82,7 @@ ol.tree
 
 	li input:checked + ol
 	{
+        background-position: left center;
 		background: url(Icons/toggle-small.png) 40px 5px no-repeat;
 		margin: -1.25em 0 0 -44px; /* 20px */
 		padding: 1.563em 0 0 80px;
@@ -103,3 +91,28 @@ ol.tree
 		li input:checked + ol > li { display: block; margin: 0 0 0.125em;  /* 2px */}
 		li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }
 
+
+
+
+
+
+
+
+
+
+        body {
+    overflow:scroll;
+}
+#FileManager{
+    list-style-type: none;
+}
+.file{
+    text-decoration:none;
+    cursor:pointer;
+}
+.file:hover:not(.selectedFile){
+    color:darkgray;
+}
+.selectedFile{
+    color:red !important;
+}
