--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 </pre>
 
 
-<ul id="FileManager"></ul>
+<ol id="FileManager"></ol>
 
     <div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
         Our First Prototype Of Apirix IDE  |  Current Date:
