added recognition for duplicates and notifications, though in the wrong place atm.

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -23,9 +23,6 @@
 
 
 
-
-    
-    
 <script src="~/ace/ace.js"></script>
 <script src="~/ace/ext-language_tools.js"></script>
 
@@ -43,3 +40,4 @@
     
 </script>
 
+<script src="~/Scripts/VariableChecks.js"></script>
