--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -1,17 +1,11 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
     overflow: hidden;
+    width:100%;
+    height:100%;
 }
 
 p {
     margin:0px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -28,29 +22,35 @@ textarea {
     max-width: 280px;
 }
 
-#editor {
-            margin: 0;
-            height:500px;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-#DocumentHeader {
+#de {
     text-align:center;
 }
 
-.buttondiv {
-    width:92px;
-    height:20px;
+#editor {
+    margin: 0;
+    width:900px;
+    height:600px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index:50;
+    margin-left:auto;
+    margin-right:auto;
 }
-
+#DocumentHeader {
+    text-align:center;
+}
 .p-aligncenter {
     text-align:center;
     font-weight:bold;
     margin:0px;
+    width:92px;
+    height:20px;
 }
-
+#myDropdown {
+    background-color:white;
+}
 #dropdownContent {
     position: relative;
     display: inline-block;
@@ -58,15 +58,15 @@ textarea {
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
     border: none;
     cursor: pointer;
+    background-color:transparent;
+    padding:5px;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color:aliceblue;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -79,7 +79,6 @@ textarea {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
     width: 92px;
     height:60px;
 }
@@ -88,12 +87,62 @@ textarea {
 .dropdown-content a {
     text-decoration: none;
     display: block;
+    background-color:white;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content p:hover {
+    background-color:rgb(204,255,255);
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+    display:block;
+}
 
-
+#fullwidth1pxheight {
+    width:100%;
+    height:30px;
+    background-color:white;
+    z-index:52;
+}
+#tinybox {
+    width:20px;
+    height:20px;
+    float:left;
+    background-image:url("../../pics/arrows.png");
+    background-repeat:no-repeat;
+    background-size:cover;
+    margin:5px;
+}
+#tinyboxtwin {
+    display:none;
+    width:20px;
+    height:20px;
+    background-image:url("../../pics/arrowsup.png");
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-color:white;
+}
+#twinbox {
+    width:100%;
+    height:30px;
+    display:none;
+    padding-top:5px;
+    padding-left:5px;
+}
+a {
+    text-decoration:none;
+}
+#f11 {
+    float:left;
+    padding:5px;
+}
+#f11r {
+    float:left;
+    padding:5px;
+    margin-left:1px;
+}
+.clickdivf11f11r:hover {
+    background-color:aliceblue;
+}
