Changing branch, no new features

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 
 
-
+<script src="~/Scripts/jquery-1.10.2.js"></script>
 
     <h1 id="DocumentHeader">IDE Prototype</h1>
     <pre id="editor" style="height:300px">
