--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -1,10 +1,6 @@
 ﻿body {
-    overflow: hidden;
     width:100%;
     height:100%;
-}
-
-p {
     margin:0px;
 }
 
@@ -37,6 +33,7 @@ textarea {
     z-index:50;
     margin-left:auto;
     margin-right:auto;
+    border:1px solid gray;
 }
 #DocumentHeader {
     text-align:center;
@@ -51,6 +48,12 @@ textarea {
 #myDropdown {
     background-color:white;
 }
+#myDropdownSch {
+    background-color:white;
+}
+#myDropdownRes {
+    background-color:white;
+}
 #dropdownContent {
     position: relative;
     display: inline-block;
@@ -62,6 +65,7 @@ textarea {
     cursor: pointer;
     background-color:transparent;
     padding:5px;
+    font-size:17px;
 }
 
 /* Dropdown button on hover & focus */
@@ -114,6 +118,7 @@ textarea {
     background-repeat:no-repeat;
     background-size:cover;
     margin:5px;
+    cursor:pointer;
 }
 #tinyboxtwin {
     display:none;
@@ -123,26 +128,84 @@ textarea {
     background-repeat:no-repeat;
     background-size:cover;
     background-color:white;
+    cursor:pointer;
 }
 #twinbox {
-    width:100%;
-    height:30px;
+    width:95%;
+    height:25px;
     display:none;
-    padding-top:5px;
-    padding-left:5px;
+    margin-left:5px;
+    margin-top:5px;
+    cursor:pointer;
 }
 a {
     text-decoration:none;
 }
 #f11 {
     float:left;
-    padding:5px;
+    padding:6px;
+    cursor:pointer;
 }
 #f11r {
     float:left;
-    padding:5px;
+    padding:6px;
     margin-left:1px;
+    cursor:pointer;
 }
 .clickdivf11f11r:hover {
     background-color:aliceblue;
+}
+#boxie {
+    background-image:url("../pics/../pics/cartoongearwheel.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    width:20px;
+    height:20px;
+    float:right;
+    cursor:pointer;
+}
+#boxieR {
+    background-image:url("../pics/../pics/cartoongearwheel.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    width:20px;
+    height:20px;
+    float:right;
+    display:none;
+    cursor:pointer;
+}
+#showcontent {
+    width:300px;
+    display:none;
+    float:right;
+    z-index:62;
+    position:fixed;
+    right:5px;
+    background-color:white;
+    border:1px solid black;
+    border-top:1px dashed;
+}
+p {
+    margin:0px 0px 0px 0px;
+}
+.pshow {
+    text-align:center;
+}
+.spanp {
+    background-color:yellow;
+    margin-bottom:5px;
+}
+#span1 {
+    display:none;
+}
+#CommandHeader {
+    text-align:center;
+}
+.spanCommandP {
+    text-align:center;
+    font-size:20px;
+    line-height:1.5em;
+}
+.spanpointer {
+    cursor:pointer;
 }
