--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <p onclick="myFunctionSch()" class="dropbtn">Förintställdt</p>
+            <p onclick="myFunctionSch()" class="dropbtn">Förintställt</p>
             <div id="myDropdownSch" class="dropdown-content">
                 <p onclick="white(); Res1()" class="p-aligncenter">Stark</p>
                 <p onclick="black(); Res2()" class="p-aligncenter">Dark</p>
@@ -48,13 +48,13 @@
     <div id="showcontent">
         <h2 id="CommandHeader">Shortcut Commands</h2>
         <p class="spanCommandP"><span onclick="full()" class="spanpointer">Fullscreen</span> | ctrl + b</p>
-        <p class="spanCommandP"><span onclick="revert()" class="spanpointer">Window Mode</span> | ctrl + y</p>
+        <p class="spanCommandP"><span onclick="revert()" class="spanpointer">Window Mode</span> | shift + y</p>
         <p class="spanCommandP"><span onclick="black()" class="spanpointer">Black background</span> | shift + b</p>
         <p class="spanCommandP"><span onclick="white()" class="spanpointer">White background</span> | shift + w</p>
         <p class="spanCommandP"><span onclick="grayblue()" class="spanpointer">Grayblue background</span> | shift + g</p>
-        <p class="spanCommandP"><span onclick="Res1()" class="spanpointer">600 x 450</span> | N/A</p>
-        <p class="spanCommandP"><span onclick="Res2()" class="spanpointer">900 x 600</span> | N/A</p>
-        <p class="spanCommandP"><span onclick="Res3()" class="spanpointer">1200 x 800</span> | N/A</p>
+        <p class="spanCommandP"><span onclick="Res1()" class="spanpointer">600 x 450 Resolution</span> | N/A</p>
+        <p class="spanCommandP"><span onclick="Res2()" class="spanpointer">900 x 600 Resolution</span> | N/A</p>
+        <p class="spanCommandP"><span onclick="Res3()" class="spanpointer">1200 x 800 Resolution</span> | N/A</p>
     </div>
     <h1 id="de">Text editor</h1>
     <pre id="editor"></pre>
