terminal works with all commands now

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -2,33 +2,21 @@
     ViewBag.Title = "Home Page";
 }
 
+<meta charset="utf-8" />
 
-   
+<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 
+<script src="~/myjs/terminal.js"></script>
 
-
-
-
-
-    <h1 id="DocumentHeader">IDE Prototype</h1>
-    <pre id="editor" style="height:300px">
+<h1 id="DocumentHeader">Apirix IDE Prototype</h1>
+<pre id="editor" style="height:300px;margin:0px;">
        
 </pre>
 
+<div id="term"></div>
 
-    <div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
-        Our First Prototype Of Apirix IDE  |  Current Date:
-    </div>
-
-
-
-
-
-    
-    
 <script src="~/ace/ace.js"></script>
 <script src="~/ace/ext-language_tools.js"></script>
-
 
 <script>
     var editor = ace.edit("editor");
@@ -40,6 +28,87 @@
         enableSnippets: true,
         enableLiveAutocompletion: true
     });
-    
+
 </script>
+
+<script>
+
+    var myTerminal = new Terminal()
+
+    myTerminal.print("********************** APIRIX Terminal V2 **********************")
+    myTerminal.print("The commands are: | date | creator | errorlog | theme | clear |");
+
+    var lock = false;
+
+    function myfunction() {
+
+        myTerminal.input("",function (userInput) {
+            var currentime = new Date();
+
+            if (userInput == "date") {
+                myTerminal.print("Todays Date Is: " + currentime);
+                lock = false;
+            }
+            else if (userInput == "creator") {
+                myTerminal.print("The Apirix Terminal Was Brought To You By Wiggoviich ©");
+                lock = false;
+            }
+            else if (userInput == "errorlog") {
+                var annot = editor.getSession().getAnnotations();
+                console.log(annot);
+
+                if (annot.length > 0) {
+
+                    for (var key in annot) {
+
+                        if (annot.hasOwnProperty(key)) {
+                            var rownr = annot[key].row + 1;
+                            myTerminal.print(annot[key].text + "on line " + " " + rownr);
+                            lock = false;
+                        }
+                    }
+                }
+                else {
+                    myTerminal.print("There Are No Error At The Moment!");
+                    lock = false
+                }
+            }
+            else if (userInput == "theme") {
+                myTerminal.print("Nothing In theme Yet");
+                lock = false;
+            }
+            else if (userInput == "clear") {
+                myTerminal.clear();
+                myTerminal.print("*********** APIRIX Terminal V2 ***********")
+                myTerminal.print("The commands are: | date | creator | errorlog | theme | clear |");
+                lock = false;
+            }
+            else {
+                myTerminal.print("There Is No Such Command,Try Another One");
+                lock = false;
+            }
+            if (lock == false) {
+                lock = true;
+                myfunction();
+            }
+        })
+    }
+    myfunction();
+    myTerminal.setBackgroundColor("#000000")
+    myTerminal.setTextColor("#00ff00")
+    myTerminal.setWidth("100%")
+    myTerminal.setHeight("180px");
+    myTerminal.setscrollY("auto");
+    myTerminal.blinkingCursor(true)
+
+    $("#term").append(myTerminal.html)
+    $("#term").css({
+        'word-break': 'break-word'
+    });
+
+</script>
+
+
+
+
 
