--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -7,18 +7,57 @@
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 
 <script src="~/myjs/terminal.js"></script>
+<script src="~/myjs/documentjs.js"></script>
 
-<h1 id="DocumentHeader">Apirix IDE Prototype</h1>
-<pre id="editor" style="height:300px;margin:0px;">
+<head>
+    <meta charset="UTF-8">
+    <title>ACE Autocompletion demo</title>
+    <link rel="stylesheet" href="../../Content/Site.css" />
+    <link rel="stylesheet" href="../../Content/bootstrap.css" />
+    <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
+</head>
+
+    <div id="fullwidth1pxheight">
+        <div id="tinybox" onclick="onf()"></div>
+        <div onclick="full()" id="f11" class="clickdivf11f11r">FullScreen</div>
+        <div onclick="revert()" id="f11r" class="clickdivf11f11r">Window Mode</div>
+        <div class="dropdown">
+            <p onclick="myFunction()" class="dropbtn">Färgschema</p>
+            <div id="myDropdown" class="dropdown-content">
+                <p onclick="white()" class="p-aligncenter">white</p>
+                <p onclick="black()" class="p-aligncenter">black</p>
+                <p onclick="grayblue()" class="p-aligncenter">grayblue</p>
+            </div>
+        </div>
+        <div class="dropdown">
+            <p onclick="myFunctionRes()" class="dropbtn">Upplösning</p>
+            <div id="myDropdownRes" class="dropdown-content">
+                <p onclick="Res1()" class="p-aligncenter">600 x 450</p>
+                <p onclick="Res2()" class="p-aligncenter">900 x 600</p>
+                <p onclick="Res3()" class="p-aligncenter">1200 x 800</p>
+            </div>
+        </div>
+        <div class="dropdown">
+            <p onclick="myFunctionSch()" class="dropbtn">Förintställt</p>
+            <div id="myDropdownSch" class="dropdown-content">
+                <p onclick="white(); Res1()" class="p-aligncenter">Stark</p>
+                <p onclick="black(); Res2()" class="p-aligncenter">Dark</p>
+                <p onclick="grayblue(); Res3()" class="p-aligncenter">Bark</p>
+            </div>
+        
+    </div>
+
+    <h1 id="DocumentHeader">Apirix IDE Prototype</h1>
+<pre id="editor" style="height:300px;margin:0px; width:100%;border:none;">
        
 </pre>
 
-<div id="term"></div>
+    <div id="term" ></div>
 
-<script src="~/ace/ace.js"></script>
-<script src="~/ace/ext-language_tools.js"></script>
+    <script src="~/ace/ace.js"></script>
+    <script src="~/ace/ext-language_tools.js"></script>
 
-<script>
+    <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/javascript");
@@ -29,9 +68,9 @@
         enableLiveAutocompletion: true
     });
 
-</script>
+    </script>
 
-<script>
+    <script>
 
     var myTerminal = new Terminal()
 
@@ -74,8 +113,48 @@
                 }
             }
             else if (userInput == "theme") {
-                myTerminal.print("Nothing In theme Yet");
-                lock = false;
+
+
+                myTerminal.print("black");
+                myTerminal.print("white");
+                myTerminal.print("bluegray");
+
+                
+
+                myTerminal.input("", function (userInput2) {
+
+                  
+
+                    if (userInput2 == "black") {
+                        black();
+                        myTerminal.print("You Choosed Theme Black")
+                        lock = false;
+                    }
+
+                    else if (userInput2 == "white") {
+                        white();
+                        myTerminal.print("You Choosed Theme White")
+                        lock = false;
+                    }
+                    else if (userInput2 == "grayblue") {
+                        grayblue();
+                        myTerminal.print("You Choosed Theme Grayblue")
+                        lock = false;
+                    }
+                    else{
+                        myTerminal.print("There Are No Theme Called That!")
+                    }
+
+                    if (lock == false) {
+                        lock = true;
+                        myfunction();
+                    }
+                    
+
+
+                });
+
+                
             }
             else if (userInput == "clear") {
                 myTerminal.clear();
@@ -106,7 +185,7 @@
         'word-break': 'break-word'
     });
 
-</script>
+    </script>
 
 
 
