I think I managed to commit changes too fast. committing again

--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -167,7 +167,7 @@ a {
     cursor:pointer;
 }
 #boxieR {
-    background-image:url("../pics/../pics/cartoongearwheel.png");
+    background-image:url("../pics/../pics/picof.png");
     background-size:cover;
     background-repeat:no-repeat;
     width:20px;
