Needs commenting, refactoring and sectioning, base funtionality is done, still problems with comments and some other things

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -11,9 +11,9 @@
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 
     <h1 id="DocumentHeader">IDE Prototype</h1>
-    <pre id="editor" style="height:300px">
+    <div id="editor" style="height:300px">
        
-</pre>
+</div>
 
 
     <div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
@@ -36,6 +36,7 @@
         enableBasicAutocompletion: true,
         enableSnippets: true,
         enableLiveAutocompletion: true
+
     });
     
 </script>
