fixed minor bug in index.html

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
 <script src="~/ace/ext-language_tools.js"></script>
 <script src="~/Scripts/FileManagement.js"></script>
 
-<script>
+        <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/javascript");
@@ -55,7 +55,7 @@
         enableLiveAutocompletion: true
 
     });
-
+    </script>
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/autoSave.js"></script>
     
