minor index fix again

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
     <h1 id="DocumentHeader">IDE Prototype</h1>
     <pre id="editor" style="height:300px">
        
-</div>
+</pre>
 
 
 <ol id="FileManager"></ol>
